--- a/UNAG/templates/general/documentos_index.html
+++ b/UNAG/templates/general/documentos_index.html
@@ -53,7 +53,7 @@
 							<td>
 								<center>
 									<a title="Editar" href="#" class="btn btn-info">
-										<span class="glyphicon glyphicon-edit"></span>
+										<span class="glyphicon glyphicon-edit">&nbsp;Ver</span>
 									</a>
 								</center>
 							</td>
