--- a/UNAG/templates/general/edificios_index.html
+++ b/UNAG/templates/general/edificios_index.html
@@ -44,7 +44,7 @@
 							 		<td>
 										<center>
 										<a title="Ver" href="{% url 'vista_detalle_edificios' e.pk %}" class="btn btn-success">
-										<span class="glyphicon glyphicon-eye-open"></span>
+										<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 										</center>
 									</td>
