--- a/UNAG/templates/general/recursohumano_index.html
+++ b/UNAG/templates/general/recursohumano_index.html
@@ -16,8 +16,11 @@
 					<a href="{% url 'vista_nuevo_recursohumano_docente' %}"  class="btn btn-default">
 						<span class="glyphicon glyphicon-plus">&nbsp;</span>Personal Académico/Administrativo
 					</a>
-
-					<small>Jefes de departamento, Coordinadores de carrera y personal docente con ó sin cargo administrativo.</small><br><br>
+					<small>Jefes de departamento, Coordinadores de carrera y personal docente con ó sin cargo administrativo.</small>
+					<p class="alert alert-warning">
+						<span class="glyphicon glyphicon-arrow-up">&nbsp;</span>
+					<b>Usar esta opción solo si se desea censar un docente desde la administración.</b>
+					</p<
 				</p>
 				<!--<p>
 					<a href="#" class="btn btn-default">
