--- a/UNAG/templates/registro/documentos_index.html
+++ b/UNAG/templates/registro/documentos_index.html
@@ -33,7 +33,7 @@
 								<td>
 									<center>
 										<a title="Ver" href="{% url 'vista_detalle_documentos' d.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
+											<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 									</center>
 								</td>								
