--- a/UNAG/templates/general/campus_index.html
+++ b/UNAG/templates/general/campus_index.html
@@ -38,7 +38,7 @@
 								<td>
 									<center>
 										<a title="Ver" href="{% url 'vista_detalle_campus' c.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
+											<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 									</center>
 								</td>								
