--- a/UNAG/templates/general/dormitorios_index.html
+++ b/UNAG/templates/general/dormitorios_index.html
@@ -41,7 +41,7 @@
 							 		<td>
 										<center>
 										<a title="Ver" href="{% url 'vista_detalle_dormitorio' d.pk %}" class="btn btn-success">
-										<span class="glyphicon glyphicon-eye-open"></span>
+										<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 										</center>
 									</td>
