--- a/UNAG/templates/registro/asignaturas_index.html
+++ b/UNAG/templates/registro/asignaturas_index.html
@@ -40,7 +40,7 @@
 								<td>
 									<center>
 										<a title="Ver" href="{% url 'vista_detalle_asignaturas' d.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
+											<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 									</center>
 								</td>								
