--- a/UNAG/templates/registro/carreras_index.html
+++ b/UNAG/templates/registro/carreras_index.html
@@ -42,7 +42,7 @@
 								<td>
 									<center>
 										<a title="Ver" href="{% url 'vista_detalle_carreras' c.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
+											<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 									</center>
 								</td>								
