--- a/UNAG/templates/registro/departamentos_academicos_index.html
+++ b/UNAG/templates/registro/departamentos_academicos_index.html
@@ -35,7 +35,7 @@
 								<td>
 									<center>
 										<a title="Ver" href="{% url 'vista_detalle_deptoacademic' da.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
+											<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 									</center>
 								</td>								
