--- a/UNAG/templates/registro/horario_nuevo.html
+++ b/UNAG/templates/registro/horario_nuevo.html
@@ -8,18 +8,7 @@
 
 {% block container %}
 	<div class="container">
-		<legend>Nuevo Horario para:<a href="{% url 'vista_administracion_secciones' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
-		<div class="col-lg-8">
-			<div class="alert alert-info">
-				{% for s in seccion %}
-					<p>Sección: <b>{{s.descripcion}}</b></p>
-					<p>Periodo: <b>{{s.periodo_clase}} AÑO {{s.periodo_clase.periodo.anio}}</b></p>
-					<p>Jornada: <b>{{s.jornada}}</b></p>
-					<p>Carrera: <b>{{s.carrera}}</b></p>
-					
-				{% endfor %}
-			</div>
-		</div>
+		<legend>Nuevo Horario <a href="javascript:history.back(1)" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
 		<div class="col-lg-8">
 			<form id="frm_carrea" name="frm_carrera" action="." method="POST">{% csrf_token %}	
 				{% if formulario.errors %}				
@@ -27,15 +16,15 @@
 							<h4>Formulario contiene errores!!</h4>
 					</div>
 				{% else %}
-					<!--<div class="alert alert-success">
-							<p><h4>Última sección guardada!!</h4>
+					<div class="alert alert-success">
+							<p><h4>Último Horario guardado!!</h4>
 							{% for c in ultimo %} <b>"{{ c.descripcion }}" el {{c.fecha_creacion}}</b> {% endfor %}<p>
-					</div>-->
+					</div>
 				{% endif %}
-				{{form_horario.as_p}}
-				{{form_asignatura_seccion.as_p}}
+				{{formulario.as_p}}
+				
 				<button type="submit" class="btn btn-primary">
-					<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
+					<span class="glyphicon glyphicon-save">&nbsp;</span>Continuar</button>
 			</form>
 		</div>
 	</div>
@@ -43,7 +32,7 @@
 
 {% block extrajs %}
 	<script type="text/javascript">
-		//actualizaChosen()
+		actualizaChosen()
 		$('#id_hora_inicial').timepicker({stepMinute: 5});
 		$('#id_hora_final').timepicker({stepMinute: 5});
 	</script>
