--- a/UNAG/templates/registro/seccion_nuevo.html
+++ b/UNAG/templates/registro/seccion_nuevo.html
@@ -2,7 +2,7 @@
 
 {% block container %}
 	<div class="container">
-		<legend>Nueva Sección <a href="{% url 'vista_administracion_carreras' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
+		<legend>Nueva Sección <a href="javascript:history.back(1)" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
 		<div class="col-lg-8">
 			<form id="frm_carrea" name="frm_carrera" action="." method="POST">{% csrf_token %}	
 				{% if formulario.errors %}				
