--- a/UNAG/templates/registro/tipo_asignatura_index.html
+++ b/UNAG/templates/registro/tipo_asignatura_index.html
@@ -37,7 +37,7 @@
 								<td>
 									<center>
 										<a title="Ver" href="{% url 'vista_detalle_tipo_asignaturas' ta.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
+											<span class="glyphicon glyphicon-eye-open">&nbsp;Ver</span>
 										</a>
 									</center>
 								</td>								
